# Lumen

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTINUAL_LEARNING.md  EVIDENCE_POLICY.md  FORMAL_VERIFICATION_TARGETS.md  FREELATTICE_INTEGRATION.md  HARDWARE_TARGETS.md  IMPLEMENTATION_GAP_LEDGER.md  INTEGRATION_GUIDE.md  MUST_KEEP_REGISTRY.md  VALIDATION.md
examples/: demo_full_loop.py
observatory/quillan/: schema.json
scripts/: generate_e3_receipt.py  verify_e3_package.py
src/lumen/: __init__.py  chronicle.py  hardware_veto.py  receipt.py  replay.py
src/lumen/adapters/: __init__.py  freelattice.py
src/lumen/authority/: __init__.py  verifier.py
src/lumen/continual_learning/: __init__.py  forgetting_detector.py  memprobe.py  models.py  promotion_engine.py  skill_extractor.py  transfer_analyzer.py
src/lumen/providers/: __init__.py  base.py
src/lumen/replay_cache/: __init__.py  sqlite_replay.py
src/lumen/skills/: __init__.py  manifest.py
tests/: test_continual_learning.py  test_e3_upgrade.py  test_freelattice_integration.py  test_lumen_mvp.py
